--- a/assets/css/less/page/header.less
+++ b/assets/css/less/page/header.less
@@ -3,22 +3,22 @@
 .page__header {
     position: absolute;
     z-index: 3000;
-    padding-top: 23px;
+    padding-top: 20px;
     width: 100%;
     top: 0;
     left: 0;
 
     .wrapper {
-        max-width: 1224px;
-        padding-left: 24px;
-        padding-right: 24px;
-        margin-left: auto;
-        margin-right: auto;
+        padding: 16px 20px;
+        background-color: #242423;
+        margin-left: 20px;
+        margin-right: 20px;
 
         .logo { 
+            width: 119px;
 
             a {
-                width: 205px;
+                width: 100%;
 
                 img {
                     width: 100%;
@@ -40,7 +40,7 @@
             }
 
             .navbar__overlay {
-                background-color: #020307; 
+                background-color: #242423; 
                 z-index: 3001;
                 display: none;
                 .animation__fade_in_right();
@@ -61,10 +61,12 @@
                         height: 90%;
 
                         .overlay__header {
+                            display: flex;
+                            align-items: flex-end;
                             margin: 30px 30px 109px 30px; 
 
-                            .overlay__logo {
-                                width: 190px;
+                            .overlay__close {
+                                width: fit-content;
                             }
                         }
 
@@ -76,11 +78,9 @@
                                 
                                 a {
                                     font-size: 16px;
-                                    font-weight: 600;
+                                    font-weight: 500;
                                     text-align: center;                             
-                                    color: #F0F8FF;
-                                    text-decoration: none;
-                                    text-transform: uppercase;
+                                    color: #F5F5F5;
                                 }
                             }
 
@@ -90,6 +90,29 @@
                                 align-items: center;
                                 margin-top: 80px;                               
                             }
+
+                            .btn__whats {
+                                display: flex;
+                                align-items: center;
+                                gap: 16px;
+                                border: 1px solid #F5F5F5;
+                                font: 400 16px @fontR;
+                                color: #F5F5F5;
+                                line-height: 116%;
+                                letter-spacing: 3.6px;
+                                padding: 12px 34px;
+                                transition: all linear .15s;
+                                margin-top: 32px;
+            
+                                .icon {
+                                    width: fit-content;
+                                }
+            
+                                &:hover {
+                                   background-color: rgba(245, 245, 245, 10%);
+                                   color: #F5F5F5;
+                                }
+                            }
                         }
                     }
                 } 
@@ -98,38 +121,60 @@
     }  
 
     @media screen and (min-width: 1200px) {
-        padding-top: 45px;
+        padding-top: 24px;
 
         .wrapper {
+            max-width: 1215px;
+            padding: 18px 36px;
+            margin-left: auto;
+            margin-right: auto;
             
-            .logo {
-                margin-left: 0;
-
-                a {
-                    width: 290px;
-                }
+            .logo { 
+                width: 161px;
             }
 
             .is--desktop {
                 display: flex;
                 align-items: center;
-                justify-content: flex-end;
+                justify-content: space-between;
+                width: 736px;
 
                 .links {
                     display: flex;
-                    gap: 50px;
+                    gap: 30px;
 
                     a {
                         font-size: 16px;
-                        font-weight: 600;
+                        font-weight: 500;
                         transition: all linear .15s;
-                        text-transform: uppercase; 
-                        color: #F0F8FF;
+                        color: #F5F5F5;
 
                         &:hover {                            
                             cursor: pointer; 
-                            color: #0184FE;
+                            color: #F1991D;
                         }
+                    }
+                }
+
+                .btn__whats {
+                    display: flex;
+                    align-items: center;
+                    gap: 16px;
+                    border: 1px solid #F5F5F5;
+                    font: 400 16px @fontR;
+                    color: #F5F5F5;
+                    line-height: 116%;
+                    letter-spacing: 3.6px;
+                    padding: 12px 34px;
+                    transition: all linear .15s;
+
+                    .icon {
+                        width: fit-content;
+                    }
+
+                    &:hover {
+                       background-color: rgba(245, 245, 245, 10%);
+                       color: #F5F5F5;
                     }
                 }
             }
