--- a/assets/css/less/page/theme.less
+++ b/assets/css/less/page/theme.less
@@ -5,3 +5,6 @@ body {
     font-family: "Roboto", sans serif;
     color: #131312;
 }
+
+@fontR: "Roboto", sans serif;
+@fontB: "Bebas Neue", serif;
