--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -252,20 +252,22 @@ nav {
 .page__header {
   position: absolute;
   z-index: 3000;
-  padding-top: 23px;
+  padding-top: 20px;
   width: 100%;
   top: 0;
   left: 0;
 }
 .page__header .wrapper {
-  max-width: 1224px;
-  padding-left: 24px;
-  padding-right: 24px;
-  margin-left: auto;
-  margin-right: auto;
+  padding: 16px 20px;
+  background-color: #242423;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.page__header .wrapper .logo {
+  width: 119px;
 }
 .page__header .wrapper .logo a {
-  width: 205px;
+  width: 100%;
 }
 .page__header .wrapper .logo a img {
   width: 100%;
@@ -282,7 +284,7 @@ nav {
   width: fit-content;
 }
 .page__header .wrapper .is--mobile .navbar__overlay {
-  background-color: #020307;
+  background-color: #242423;
   z-index: 3001;
   display: none;
   animation-duration: 1s;
@@ -305,10 +307,12 @@ nav {
   height: 90%;
 }
 .page__header .wrapper .is--mobile .navbar__overlay.open .overlay__content .overlay__header {
+  display: flex;
+  align-items: flex-end;
   margin: 30px 30px 109px 30px;
 }
-.page__header .wrapper .is--mobile .navbar__overlay.open .overlay__content .overlay__header .overlay__logo {
-  width: 190px;
+.page__header .wrapper .is--mobile .navbar__overlay.open .overlay__content .overlay__header .overlay__close {
+  width: fit-content;
 }
 .page__header .wrapper .is--mobile .navbar__overlay.open .overlay__content .overlay__menu {
   margin: 0;
@@ -318,11 +322,9 @@ nav {
 }
 .page__header .wrapper .is--mobile .navbar__overlay.open .overlay__content .overlay__menu .overlay__links a {
   font-size: 16px;
-  font-weight: 600;
+  font-weight: 500;
   text-align: center;
-  color: #F0F8FF;
-  text-decoration: none;
-  text-transform: uppercase;
+  color: #F5F5F5;
 }
 .page__header .wrapper .is--mobile .navbar__overlay.open .overlay__content .overlay__menu .overlay__social {
   display: flex;
@@ -330,38 +332,200 @@ nav {
   align-items: center;
   margin-top: 80px;
 }
+.page__header .wrapper .is--mobile .navbar__overlay.open .overlay__content .overlay__menu .btn__whats {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  border: 1px solid #F5F5F5;
+  font: 400 16px "Roboto", sans serif;
+  color: #F5F5F5;
+  line-height: 116%;
+  letter-spacing: 3.6px;
+  padding: 12px 34px;
+  transition: all linear 0.15s;
+  margin-top: 32px;
+}
+.page__header .wrapper .is--mobile .navbar__overlay.open .overlay__content .overlay__menu .btn__whats .icon {
+  width: fit-content;
+}
+.page__header .wrapper .is--mobile .navbar__overlay.open .overlay__content .overlay__menu .btn__whats:hover {
+  background-color: rgba(245, 245, 245, 0.1);
+  color: #F5F5F5;
+}
 @media screen and (min-width: 1200px) {
   .page__header {
-    padding-top: 45px;
+    padding-top: 24px;
+  }
+  .page__header .wrapper {
+    max-width: 1215px;
+    padding: 18px 36px;
+    margin-left: auto;
+    margin-right: auto;
   }
   .page__header .wrapper .logo {
-    margin-left: 0;
-  }
-  .page__header .wrapper .logo a {
-    width: 290px;
+    width: 161px;
   }
   .page__header .wrapper .is--desktop {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
+    width: 736px;
   }
   .page__header .wrapper .is--desktop .links {
     display: flex;
-    gap: 50px;
+    gap: 30px;
   }
   .page__header .wrapper .is--desktop .links a {
     font-size: 16px;
-    font-weight: 600;
+    font-weight: 500;
     transition: all linear 0.15s;
-    text-transform: uppercase;
-    color: #F0F8FF;
+    color: #F5F5F5;
   }
   .page__header .wrapper .is--desktop .links a:hover {
     cursor: pointer;
-    color: #0184FE;
+    color: #F1991D;
+  }
+  .page__header .wrapper .is--desktop .btn__whats {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    border: 1px solid #F5F5F5;
+    font: 400 16px "Roboto", sans serif;
+    color: #F5F5F5;
+    line-height: 116%;
+    letter-spacing: 3.6px;
+    padding: 12px 34px;
+    transition: all linear 0.15s;
+  }
+  .page__header .wrapper .is--desktop .btn__whats .icon {
+    width: fit-content;
+  }
+  .page__header .wrapper .is--desktop .btn__whats:hover {
+    background-color: rgba(245, 245, 245, 0.1);
+    color: #F5F5F5;
   }
   .page__header .wrapper .is--mobile {
     display: none;
+  }
+}
+.page__banner {
+  background-image: url('../img/bg-banner-desktop.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: left -4px top 0;
+}
+.page__banner .wrapper {
+  max-width: 1128px;
+  padding-left: 24px;
+  padding-right: 24px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 254px;
+  padding-bottom: 50px;
+}
+.page__banner .wrapper .content {
+  max-width: 475px;
+  margin-bottom: 100px;
+}
+.page__banner .wrapper .content .title__detail {
+  margin-bottom: 24px;
+}
+.page__banner .wrapper .content .title {
+  font: 400 72px "Bebas Neue", serif;
+  color: #242423;
+  line-height: 94%;
+  letter-spacing: -1.4px;
+  margin-bottom: 16px;
+}
+.page__banner .wrapper .content .description {
+  font: 16px 400 "Roboto", sans serif;
+  color: #000;
+  line-height: 127%;
+  margin-bottom: 32px;
+}
+.page__banner .wrapper .content .button {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  background-color: #F1991D;
+  font: 700 16px "Roboto", sans serif;
+  line-height: 116%;
+  letter-spacing: 2.6px;
+  color: #F5F5F5;
+  padding: 11px 36px;
+  transition: all linear 0.15s;
+  width: fit-content;
+}
+.page__banner .wrapper .content .button .icon {
+  width: fit-content;
+}
+.page__banner .wrapper .content .button:hover {
+  background-color: #242423;
+  color: #F5F5F5;
+}
+.page__banner .wrapper .down {
+  width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media (max-width: 1200px) {
+  .page__banner {
+    background-image: url('../img/bg-banner-mobile.png');
+    background-position: left 0 top 0;
+  }
+  .page__banner .wrapper {
+    padding-top: 205px;
+    padding-bottom: 36px;
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+  .page__banner .wrapper .content {
+    margin-bottom: 180px;
+  }
+  .page__banner .wrapper .content .title {
+    font-size: 54px;
+  }
+}
+.brands__scrolling {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  object-fit: contain;
+  background-color: #EAE4DB;
+}
+.brands__scrolling .do-not-overflow {
+  overflow: hidden;
+  padding: 52px 0;
+}
+.brands__scrolling .do-not-overflow .ticker-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  object-fit: contain;
+}
+.brands__scrolling .do-not-overflow .ticker-container .ticker {
+  display: flex;
+  align-items: center;
+  gap: 100px;
+  animation: scroll 30s linear infinite;
+}
+.brands__scrolling .do-not-overflow .marquee {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font: 400 40px "Bebas Neue", serif;
+  line-height: 90%;
+  color: #131312;
+}
+.brands__scrolling .do-not-overflow .marquee .icon {
+  margin-bottom: 8px;
+}
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-100%);
   }
 }
 .page__footer {
