--- a/assets/css/less/page/banner.less
+++ b/assets/css/less/page/banner.less
@@ -50,6 +50,7 @@
             padding: 11px 36px;
             transition: all linear .15s;
             width: fit-content;
+            border-radius: 5px;
 
             .icon {
                 width: fit-content;
