--- a/assets/css/less/page/header.less
+++ b/assets/css/less/page/header.less
@@ -103,6 +103,7 @@
                                 padding: 12px 34px;
                                 transition: all linear .15s;
                                 margin-top: 32px;
+                                border-radius: 5px;
             
                                 .icon {
                                     width: fit-content;
@@ -167,6 +168,7 @@
                     letter-spacing: 3.6px;
                     padding: 12px 34px;
                     transition: all linear .15s;
+                    border-radius: 5px;
 
                     .icon {
                         width: fit-content;
