--- a/assets/css/less/page/ticker.less
+++ b/assets/css/less/page/ticker.less
@@ -38,6 +38,26 @@
       }
     }
   }
+
+  @media (max-width: 1200px) {
+    .do-not-overflow {
+      padding: 32px 0;
+
+      .ticker-container .ticker {
+        gap: 64px;
+        animation: scroll 10s linear infinite;
+      }
+
+      .marquee {
+        font-size: 30px;
+
+        .icon {
+          width: 30px;
+          margin-bottom: 5px;
+        }
+      }
+    }
+  }
   
   
 }
