--- a/assets/css/less/page/about.less
+++ b/assets/css/less/page/about.less
@@ -1,2 +1,166 @@
 //out: false
 
+.page__about {
+    padding-top: 100px;
+    padding-bottom: 110px;
+
+    .wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        gap: 100px;
+        max-width: 1108px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 24px;
+        padding-right: 24px;
+        margin-bottom: 94px;
+
+        .content {
+            width: 462px;
+
+            .heading {
+                margin-bottom: 32px;
+
+                .title__detail {
+                    margin-bottom: 10px;
+                }
+
+                .title {
+                    font: 400 16px @fontR;
+                    line-height: 127%;
+                    letter-spacing: 2.2px;
+                    margin-bottom: 5px;
+                    color: #FF9500;
+                    text-transform: uppercase;
+                }
+
+                .subtitle {
+                    font: 400 64px @fontB;
+                    color: #242423;
+                    line-height: 94%;
+                    letter-spacing: -1.3px;
+                }                
+            }
+            .text__highlight {
+                font: 500 24px @fontR;
+                color: #131312;
+                line-height: 122%;
+                margin-bottom: 32px;
+
+                span {
+                    font-weight: 700;
+                }
+            }
+
+            .text {
+                font: 400 16px @fontR;
+                color: #131312;
+                line-height: 137%;
+
+                span {
+                    font-weight: 700;
+                }
+            }
+        }
+
+        .cover {
+            max-width: 434px;
+            box-shadow: 20px 20px 0 #131312;
+            border-radius: 5px;
+        }
+    }
+
+    .wrapper__features {
+        display: flex;
+        align-items: center;
+        gap: 32px;
+        justify-content: space-between;
+        max-width: 1246px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: 24px;
+        padding-right: 24px;
+
+        .card__feature {
+            padding: 30px 42px;
+            width: 50%;
+
+            .card__title {                
+                display: flex;
+                align-items: center;
+                gap: 29px;
+                font: 700 22px @fontR;
+                color: #F5F5F5;
+                margin-bottom: 16px;
+
+                .icon {
+                    width: fit-content;
+                }
+            }
+
+            .text {
+                font: 400 16px @fontR;
+                color: #F5F5F5;
+            }
+
+            &.card-1 {
+               background-color: #242423; 
+            }
+
+            &.card-2 {
+                background-color: #FF9500; 
+
+                .text {
+                    color: #131312;
+                }
+             }
+        }
+    }
+
+    @media (max-width: 1200px) {
+        padding-top: 60px;
+        padding-bottom: 60px;
+
+        .wrapper {
+            gap: 42px;
+            flex-direction: column;
+            margin-bottom: 72px;
+
+            .content {
+                width: 100%;
+
+                .heading {
+
+                    .subtitle {
+                        font-size: 52px;
+                    }
+                }
+
+                .text__highlight {
+                    font-size: 22px;
+                }
+            }
+
+            .cover {
+                width: 90%;
+            }
+        }
+
+        .wrapper__features {
+            flex-direction: column;
+            gap: 32px;
+
+            .card__feature {
+                width: 100%;
+                padding: 24px;
+
+                .card__title {
+                    font-size: 22px;
+                    gap: 16px;
+                }
+            }
+        }
+    }
+}
+
