--- a/assets/css/less/page/benefits.less
+++ b/assets/css/less/page/benefits.less
@@ -1,1 +1,13 @@
 //out: false
+
+.page__benefits {
+    padding-top: 100px;
+    padding-bottom: 135px;
+    background-image: url('../img/bg-benefits-desktop.png');
+    background-repeat: no-repeat;
+    background-position: top 0 left 0;
+
+    .wrapper {
+        
+    }
+}
