--- a/assets/css/less/page/cta-2.less
+++ b/assets/css/less/page/cta-2.less
@@ -1,2 +1,82 @@
 //out: false
 
+.page__cta-2 {
+    padding-top: 90px;
+    padding-bottom: 100px;
+    background-image: url('../img/bg-cta-desktop-2.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    .wrapper {
+        max-width: 1028px;
+        padding-left: 24px;
+        padding-right: 24px;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .title__detail {
+            width: fit-content;
+            margin-bottom: 32px;
+        }
+
+        .title {
+            font: 400 64px @fontB;
+            color: #F5F5F5;
+            margin-bottom: 32px;
+            text-align: center;
+
+            span {
+                color: #FF9500;
+            }
+        }
+
+        .description {
+            font: 600 20px @fontR;
+            color: #F5F5F5;
+            margin-bottom: 68px;
+            line-height: 127%;
+            width: 506px;
+            text-align: center;
+        }
+
+        .button {
+            display: flex;
+            align-items: center;
+            gap: 16px;
+            padding: 12px 62px;
+            border-radius: 5px;
+            background-color: #FFF;
+            line-height: 116%;
+            letter-spacing: 1.6px;
+            font: 700 16px @fontR;
+            color: #242423;
+            transition: all linear .15s;
+
+            &:hover {
+                background-color: #FF9500;
+                color: #F5F5F5;
+            }
+        }
+
+    }
+
+    @media (max-width: 1200px) {
+        margin-top: 80px;
+        padding-top: 60px;
+        padding-bottom: 60px;
+
+        .wrapper {
+
+            .title {
+                font-size: 48px;
+            }
+
+            .description {
+                width: 100%;
+            }
+        }
+    }
+}
