--- a/assets/css/less/page/laje.less
+++ b/assets/css/less/page/laje.less
@@ -1,16 +1,16 @@
 //out: false
 
 .page__company {
-    padding-top: 63px;
     padding-bottom: 118px;
 
     .wrapper {
-        max-width: 1130px;
+        max-width: 1090px;
         padding-left: 24px;
         padding-right: 24px;
         margin-left: auto;
         margin-right: auto;
         display: flex;
+        align-items: center;
         gap: 60px;
         justify-content: space-between;
 
@@ -122,6 +122,9 @@
     }
 
     @media (max-width: 1200px) {
+        padding-top: 30px;
+        padding-bottom: 60px;
+
         .wrapper {
             flex-direction: column;
             align-items: center;
