--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -466,7 +466,7 @@ nav {
   font: 400 16px "Roboto", sans serif;
   color: #F5F5F5;
   line-height: 116%;
-  letter-spacing: 3.6px;
+  letter-spacing: 2px;
   padding: 12px 34px;
   transition: all linear 0.15s;
   margin-top: 32px;
@@ -520,7 +520,7 @@ nav {
     font: 400 16px "Roboto", sans serif;
     color: #F5F5F5;
     line-height: 116%;
-    letter-spacing: 3.6px;
+    letter-spacing: 2px;
     padding: 12px 34px;
     transition: all linear 0.15s;
     border-radius: 5px;
@@ -841,7 +841,7 @@ nav {
   border-radius: 5px;
   background-color: #FFF;
   line-height: 116%;
-  letter-spacing: 2.6px;
+  letter-spacing: 2px;
   font: 500 16px "Roboto", sans serif;
   color: #242423;
   transition: all linear 0.15s;
@@ -953,16 +953,16 @@ nav {
   }
 }
 .page__company {
-  padding-top: 63px;
   padding-bottom: 118px;
 }
 .page__company .wrapper {
-  max-width: 1130px;
+  max-width: 1090px;
   padding-left: 24px;
   padding-right: 24px;
   margin-left: auto;
   margin-right: auto;
   display: flex;
+  align-items: center;
   gap: 60px;
   justify-content: space-between;
 }
@@ -1057,6 +1057,10 @@ nav {
   color: #F5F5F5;
 }
 @media (max-width: 1200px) {
+  .page__company {
+    padding-top: 30px;
+    padding-bottom: 60px;
+  }
   .page__company .wrapper {
     flex-direction: column;
     align-items: center;
@@ -1095,6 +1099,197 @@ nav {
   }
   .page__company .wrapper .cover__cta .card__cta .button {
     padding: 12px 30px;
+  }
+}
+.page__cta-2 {
+  padding-top: 90px;
+  padding-bottom: 100px;
+  background-image: url('../img/bg-cta-desktop-2.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.page__cta-2 .wrapper {
+  max-width: 1028px;
+  padding-left: 24px;
+  padding-right: 24px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.page__cta-2 .wrapper .title__detail {
+  width: fit-content;
+  margin-bottom: 32px;
+}
+.page__cta-2 .wrapper .title {
+  font: 400 64px "Bebas Neue", serif;
+  color: #F5F5F5;
+  margin-bottom: 32px;
+  text-align: center;
+}
+.page__cta-2 .wrapper .title span {
+  color: #FF9500;
+}
+.page__cta-2 .wrapper .description {
+  font: 600 20px "Roboto", sans serif;
+  color: #F5F5F5;
+  margin-bottom: 68px;
+  line-height: 127%;
+  width: 506px;
+  text-align: center;
+}
+.page__cta-2 .wrapper .button {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  padding: 12px 62px;
+  border-radius: 5px;
+  background-color: #FFF;
+  line-height: 116%;
+  letter-spacing: 1.6px;
+  font: 700 16px "Roboto", sans serif;
+  color: #242423;
+  transition: all linear 0.15s;
+}
+.page__cta-2 .wrapper .button:hover {
+  background-color: #FF9500;
+  color: #F5F5F5;
+}
+@media (max-width: 1200px) {
+  .page__cta-2 {
+    margin-top: 80px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .page__cta-2 .wrapper .title {
+    font-size: 48px;
+  }
+  .page__cta-2 .wrapper .description {
+    width: 100%;
+  }
+}
+.page__projects {
+  padding-top: 90px;
+  padding-bottom: 120px;
+  background-color: #EAE4DB;
+}
+.page__projects .wrapper {
+  max-width: 906px;
+  padding-left: 24px;
+  padding-right: 24px;
+  margin-left: auto;
+  margin-right: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas: 'head head button' 'video video video';
+  gap: 72px;
+}
+.page__projects .wrapper .heading {
+  grid-area: head;
+}
+.page__projects .wrapper .heading .title__detail {
+  margin-bottom: 8px;
+}
+.page__projects .wrapper .heading .title {
+  font: 400 16px "Roboto", sans serif;
+  line-height: 127%;
+  letter-spacing: 2.2px;
+  margin-bottom: 12px;
+  color: #FF9500;
+  text-transform: uppercase;
+}
+.page__projects .wrapper .heading .subtitle {
+  font: 400 64px "Bebas Neue", serif;
+  color: #242423;
+  line-height: 94%;
+  letter-spacing: -1.3px;
+}
+.page__projects .wrapper .button {
+  grid-area: button;
+  background-color: #242423;
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  padding: 13px 36px;
+  border-radius: 5px;
+  font: 400 16px "Roboto", sans serif;
+  color: #F5F5F5;
+  line-height: 116%;
+  letter-spacing: 0.8px;
+  transition: all linear 0.15s;
+  width: fit-content;
+  height: fit-content;
+  margin-left: auto;
+  align-self: self-end;
+  margin-bottom: 14px;
+}
+.page__projects .wrapper .button:hover {
+  color: #F1991D;
+}
+.page__projects .wrapper .links {
+  grid-area: video;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 72px;
+}
+.page__projects .wrapper .links .card__video {
+  position: relative;
+  border-radius: 5px;
+  width: 237px;
+  height: 313px;
+  overflow: hidden;
+}
+.page__projects .wrapper .links .card__video .cover {
+  width: 100%;
+  object-fit: cover;
+  transition: all linear 0.25s;
+}
+.page__projects .wrapper .links .card__video .caption {
+  position: absolute;
+  top: 70px;
+  left: calc(50% - 95px);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 32px;
+  width: 190px;
+}
+.page__projects .wrapper .links .card__video .caption .title {
+  font: 400 36px "Bebas Neue", serif;
+  color: #F5F5F5;
+  text-align: center;
+}
+.page__projects .wrapper .links .card__video .caption .icon {
+  width: fit-content;
+}
+.page__projects .wrapper .links .card__video:hover .cover {
+  transform: scale(1.2);
+}
+.page__projects .wrapper .links .card__video:hover .caption .icon {
+  filter: brightness(0) saturate(100%) invert(68%) sepia(30%) saturate(1211%) hue-rotate(346deg) brightness(94%) contrast(101%);
+}
+@media (max-width: 1200px) {
+  .page__projects {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .page__projects .wrapper {
+    grid-template-columns: 1fr;
+    grid-template-areas: 'head' 'video' 'button';
+    gap: 42px;
+  }
+  .page__projects .wrapper .heading {
+    padding-left: 32px;
+  }
+  .page__projects .wrapper .links {
+    flex-direction: column;
+    align-items: center;
+    gap: 42px;
+  }
+  .page__projects .wrapper .button {
+    margin-right: auto;
   }
 }
 .page__footer {
