--- a/assets/css/less/components/whatsapp.less
+++ b/assets/css/less/components/whatsapp.less
@@ -4,9 +4,9 @@
     position: fixed;
     bottom: 5px;
     right: 10px;
-    width: 74px;
-    height: 74px;
-    background-color: #5BBC48;
+    width: 100px;
+    height: 100px;
+    background-color: #25D366;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -14,19 +14,27 @@
     z-index: 2999;
     transition: all linear .15s;
     border: 0;
-    border-radius: 5px;
+    border-radius: 100%;
 
     img {
-        width: 55px;
-        filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(2%) hue-rotate(202deg) brightness(106%) contrast(101%);
+        width: fit-content;
     }
 
     &:hover {
         background-color: white;
-        box-shadow: 0 0 26px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 0 26px rgba(0, 0, 0, 0.5);
 
         img {
-            filter: brightness(0) saturate(100%) invert(66%) sepia(10%) saturate(2974%) hue-rotate(64deg) brightness(99%) contrast(75%);
+            filter: brightness(0) saturate(100%) invert(65%) sepia(29%) saturate(3698%) hue-rotate(93deg) brightness(110%) contrast(71%);
+        }
+    }
+
+    @media (max-width: 1200px) {
+        width: 75px;
+        height: 75px;
+
+        img {
+            width: 50px;
         }
     }
 }
